# xdg-desktop-portal-adw

./: .gitignore  README.md  meson.build
data/: adw.portal.in  meson.build  org.freedesktop.impl.portal.desktop.adw.service.in  xdg-desktop-portal-adw.desktop.in.in  xdg-desktop-portal-adw.service.in
src/: appchooserdialog.ui  appchooserrow.ui  filechooser.c  meson.build  xdg-desktop-portal-adw.c  xdg-desktop-portal-adw.gresource.xml  xdg-desktop-portal-gnome.gschema.xml
